# smarthome-rs

./: .env.example  .env_local  .gitignore  Cargo.toml  Insomnia.json  README.md  _Cargo.toml  docker-compose.yml  justfile  smarthome.service  test  zellij-dev.kdl  zellij-target.kdl  zellij.kdl
bruno/smarthome-rs/: bruno.json
bruno/smarthome-rs/deconz_hub/api/Configuration/: Acquire API key.bru  Get full state.bru
bruno/smarthome-rs/driver_deconz/: -sensor-by-name--name-.bru  -sensors.bru
bruno/smarthome-rs/http-server/: get.bru  list.bru
doc/: description.md  dev_setup.md  diagram.puml  raspberry_setup.md
http-server/: Cargo.toml
http-server/src/: main.rs
libraries/db-saver-lib/: Cargo.toml
libraries/db-saver-lib/src/: errors.rs  lib.rs  save_row_in_db.rs
libraries/db-saver-lib/src/models/: mod.rs  row.rs
libraries/env-vars-lib/: Cargo.toml
libraries/env-vars-lib/src/: cli.rs  create_env_file.rs  errors.rs  lib.rs  load_env_vars.rs
libraries/opcua-client-lib/: Cargo.toml
libraries/opcua-client-lib/src/: create_session.rs  errors.rs  lib.rs  subscribe.rs  write.rs
libraries/opcua-client-lib/src/convert/: bool_to_variant.rs  datetime_to_chrono.rs  f32_to_variant.rs  f64_to_variant.rs  i16_to_variant.rs  mod.rs  variant_to_f64.rs  variant_to_i16.rs
libraries/redis-client-lib/: Cargo.toml  README.md
libraries/redis-client-lib/examples/: example_pub.rs  example_sub.rs  example_sub_async.rs  example_sub_sync.rs
libraries/redis-client-lib/src/: errors.rs  lib.rs  redis_pub_async.rs  redis_pub_sync.rs  redis_sub_async.rs  redis_sub_sync.rs  test.rs  traits.rs
libraries/webapp-lib/: Cargo.toml
libraries/webapp-lib/src/: define_window_url.rs  errors.rs  handle_ws_connection.rs  lib.rs
libraries/webapp-lib/src/components/: button.rs  input.rs  mod.rs  state.rs
libraries/websocket-lib/: Cargo.toml
libraries/websocket-lib/src/: async_task_utils.rs  errors.rs  lib.rs  load_all_messages_from_hash.rs
libraries/websocket-lib/src/tasks/: handle_ws_connection.rs  listen_port.rs  main.rs  mod.rs  redis_broadcast.rs
scripts/: dev-compile.nu  dev-deploy.nu  dev-sync.nu  target-install.nu  target-start.nu  target-stop.nu  test_mod.nu
scripts/lib/: install.nu  run_in_ssh.nu  sync.nu  ui.nu
services/api/: Cargo.toml
services/api/src/: app.rs  lib.rs  main.rs  state.rs
services/api/src/routes/: value.rs
services/api/tests/: route_value.rs
services/db-saver/: Cargo.toml  README.md
services/db-saver/src/: config.rs  main.rs
services/deconz-ws/: Cargo.toml  README.md  get_full_state.json
services/deconz-ws-old/: Cargo.toml
services/deconz-ws-old/src/: config.rs  errors.rs  lib.rs  main.rs  messages_from_ws.rs
services/deconz-ws/src/: config.rs  config_fn_input.rs  config_fn_output.rs  config_fn_recv.rs  config_fn_send.rs  lib.rs  main.rs  messages_from_ws.rs  read_api.rs  types.rs
services/grafana/dashboards/demo/: demo_dashboard.json
services/grafana/dashboards/loki/: _all.json  api-ws.json  api.json  db-saver.json  opcua-client.json
services/grafana/dashboards/main/: main_dashboard.json
services/grafana/datasources/: db.yaml  loki.yaml
services/http-server/: Cargo.toml
services/http-server/src/: main.rs
services/opcua-client/: Cargo.toml  README.md
services/opcua-client/src/: config.rs  main.rs
services/webapp/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
services/webapp-old/: .gitignore  Cargo.toml  index.html
services/webapp-old/src/: api.rs  lib.rs
services/webapp/src/: api.rs  app.rs  cmp_websocket_client_wasm.rs  component.rs  global_navigation.rs  global_state.rs  lib.rs  main.rs  message.rs  msg_data.rs  nav.rs  shell.rs
services/webapp/src-tauri/: Cargo.toml  tauri.conf.json
services/websocket/: Cargo.toml
services/websocket-server/: Cargo.toml  README.md
services/websocket-server/src/: main.rs
services/websocket/src/: main.rs
utils/: insomnia_config.json
utils/env_vars/: Cargo.toml  README.md
utils/env_vars/examples/: ex1.rs
utils/env_vars/src/: config.rs  create_env_file.rs  lib.rs  load_env_vars.rs  main.rs
utils/logging/: Cargo.toml  README.md
utils/logging/src/: config.rs  errors.rs  lib.rs
utils/messages/: Cargo.toml
utils/messages/src/: config.rs  erorrs.rs  lib.rs  message_channel.rs
utils/messages/src/types/: command.rs  mod.rs  single_value.rs
