[workspace]
members = [
    "./libraries/env-vars-lib",
    "./libraries/webapp-lib",
    "./services/deconz-ws",
    "./services/db-saver",
    "./services/http-server",
    "./services/webapp",
    "./services/websocket-server",
    "./utils/env_vars",
    "./utils/logging",
    "./utils/messages",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# типы данных
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# для кросс-компиляции
openssl = { version = "0.10", features = ["vendored"] }

# асинхронщина
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["full"] }

# wasm
gloo = { version = "0.10", features = ["console", "net", "utils"] }
leptos = { version = "0.5.2", features = ["csr", "tracing", "nightly"] }
leptos_router = { version = "0.5.2", features = ["csr"] }
web-sys = { version = "0.3", features = ["Location", "Window"] }

# логгирование
tracing = { version = "0.1" }
tracing-loki = { version = "0.2" }
tracing-subscriber = { version = "0.3" }

# сериализация / десериализация
dotenvy = { version = "0.15" }
envy = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = { version = "0.8" }

# мои пакеты
env-vars-lib = { path = "./libraries/env-vars-lib" }
webapp-lib = { path = "./libraries/webapp-lib" }
env_vars = { path = "./utils/env_vars" }
logging = { path = "./utils/logging" }
messages = { path = "./utils/messages" }

rsiot-messages-core = { version = "0.0.9" }
rsiot-http-server = { version = "0.0.10" }
rsiot-redis-publisher = { version = "0.0.10" }
rsiot-redis-subscriber = { version = "0.0.10" }
rsiot-timescaledb-storing = { version = "0.0.10" }
rsiot-websocket-client = { version = "0.0.10" }
rsiot-websocket-server = { version = "0.0.10" }
rsiot-extra-components = { version = "0.0.10" }
