[workspace]
members = [
    "./libraries/webapp-lib",
    "./services/deconz-ws",
    "./services/db-saver",
    "./services/webapp",
    "./services/websocket-server",
    "./utils/env_vars",
    "./utils/logging",
    "./utils/messages",
]
resolver = "2"
exclude = ["./http-server"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# типы данных
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# для кросс-компиляции
openssl = { version = "0.10", features = ["vendored"] }

# асинхронщина
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["full"] }

# wasm
gloo = { version = "0.10", features = ["console", "net", "utils"] }
leptos = { version = "0.5.2", features = ["csr", "tracing"] }
leptos_router = { version = "0.5.2", features = ["csr"] }
web-sys = { version = "0.3", features = ["Location", "Window"] }

# логгирование
tracing = { version = "0.1.40" }
tracing-loki = { version = "0.2.4" }
tracing-subscriber = { version = "0.3.18" }

# сериализация / десериализация
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# мои пакеты
webapp-lib = { path = "./libraries/webapp-lib" }
env_vars = { path = "./utils/env_vars" }
logging = { path = "./utils/logging" }
messages = { path = "./utils/messages" }

rsiot-env-vars = { version = "0.0.13" }
rsiot-extra-components = { version = "0.0.14" }
rsiot-messages-core = { version = "0.0.14" }
rsiot-redis-publisher = { version = "0.0.14" }
rsiot-redis-subscriber = { version = "0.0.14" }
rsiot-timescaledb-storing = { version = "0.0.14" }
rsiot-websocket-client = { version = "0.0.14" }
rsiot-websocket-server = { version = "0.0.14" }
