[package]
name = "http-server"
version = "0.0.1"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
rsiot = { version = "0.0.14", features = [
    "http-server",
    "redis-publisher",
    "redis-subscriber",
] }
# TODO - удалить
rsiot-component-core = { version = "*" }
tokio = { version = "1.34", features = ["full"] }
tracing = { version = "0.1.40" }
# мои пакеты
env_vars = { path = "../utils/env_vars" }
logging = { path = "../utils/logging" }
messages = { path = "../utils/messages" }
