[package]
name = "redis-client-lib"
version = "0.0.1"
edition = "2021"


[dependencies]
futures-util = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
ntest = { workspace = true }
