[package]
name = "websocket-lib"
version = "0.0.1"
edition = "2021"


[dependencies]
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

redis-client-lib = { workspace = true }
