[package]
name = "api"
version = "0.0.1"
edition = "2021"


[dependencies]
axum = { workspace = true }
openssl = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
# мои пакеты
env_vars = { workspace = true }
logging = { workspace = true }
messages = { workspace = true }
redis-client-lib = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
