[package]
name = "db-saver"
version = "0.0.1"
edition = "2021"

[dependencies]
rsiot = { workspace = true, features = [
    "redis-publisher",
    "redis-subscriber",
    "timescaledb-storing",
] }
tracing = { workspace = true }
tokio = { workspace = true }

env_vars = { workspace = true }
logging = { workspace = true }
messages = { workspace = true }
