[package]
name = "db-saver"
version = "0.0.1"
edition = "2021"

[dependencies]
openssl = { workspace = true }
rsiot-messages-core = { workspace = true }
rsiot-redis-publisher = { workspace = true }
rsiot-redis-subscriber = { workspace = true }
rsiot-timescaledb-storing = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

env_vars = { workspace = true }
logging = { workspace = true }
messages = { workspace = true }
