[package]
name = "db-saver"
version = "0.0.1"
edition = "2021"

[dependencies]
openssl = { version = "0.10.62", features = ["vendored"] }
rsiot = { version = "0.0.31", features = [
    "redis-client",
    "timescaledb-storing",
] }
tracing = { version = "0.1" }
tokio = { version = "1.34" }

env_vars = { path = "../../utils/env_vars" }
logging = { path = "../../utils/logging" }
messages = { path = "../../utils/messages" }
