[package]
name = "deconz-ws"
version = "0.0.0"
edition = "2021"


[dependencies]
chrono = { workspace = true }
openssl = { workspace = true }
rsiot-extra-components = { workspace = true }
rsiot-redis-publisher = { workspace = true }
rsiot-redis-subscriber = { workspace = true }
rsiot-websocket-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

messages = { workspace = true }
env_vars = { workspace = true }
logging = { workspace = true }

[dev-dependencies]
