[package]
name = "deconz-ws"
version = "0.0.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }
rsiot = { version = "0.0.16", features = [
    "redis-publisher",
    "redis-subscriber",
    "websocket-client",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40" }
url = { version = "2.4", features = ["serde"] }

logging = { path = "../../utils/logging" }
messages = { path = "../../utils/messages" }
env_vars = { path = "../../utils/env_vars" }

[dev-dependencies]
