[package]
name = "http-server"
version = "0.0.1"
edition = "2021"

[dependencies]
openssl = { workspace = true }
tokio = { workspace = true }
rsiot-http-server = { workspace = true }
rsiot-redis-publisher = { workspace = true }
rsiot-redis-subscriber = { workspace = true }
tracing = { workspace = true }

# мои пакеты
env_vars = { workspace = true }
logging = { workspace = true }
messages = { workspace = true }
