[package]
name = "opcua-client"
version = "0.0.1"
edition = "2021"


[dependencies]
opcua = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

env_vars = { workspace = true }
logging = { workspace = true }
messages = { workspace = true }
opcua-client-lib = { workspace = true }
redis-client-lib = { workspace = true }
