[package]
name = "webapp"
version = "0.0.1"
edition = "2021"


[dependencies]
gloo = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

rsiot-messages-core = { workspace = true }
rsiot = { version = "0.0.14", features = [] }
messages = { workspace = true }
webapp-lib = { workspace = true }
