[package]
name = "webapp-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = { version = "*" }


messages = { path = "../../utils/messages" }
gloo = { version = "0.11", features = ["net", "utils", "timers", "futures"] }

rsiot = { path = "../../../rsiot/rsiot" }
rsiot-component-singlethread = { path = "../../../rsiot/rsiot-component-singlethread" }

[workspace]
members = ["src-tauri"]
