[package]
name = "websocket-server"
version = "0.0.1"
edition.workspace = true

[dependencies]
openssl = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rsiot-redis-publisher = { workspace = true }
rsiot-redis-subscriber = { workspace = true }
rsiot-websocket-server = { workspace = true }
env_vars = { workspace = true }
logging = { workspace = true }
messages = { workspace = true }
