[package]
name = "websocket-server"
version = "0.0.1"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
rsiot = { version = "0.0.31", features = ["redis-client", "websocket-server"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40" }

env_vars = { path = "../../utils/env_vars" }
logging = { path = "../../utils/logging" }
messages = { path = "../../utils/messages" }
