[package]
name = "env_vars"
version = "0.0.1"
edition = "2021"


[dependencies]
clap = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

env-vars-lib = { workspace = true }
